--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   "license": "MIT",
   "dependencies": {
     "gatsby": "^2.19.10",
+    "gatsby-plugin-manifest": "^2.2.40",
     "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-purgecss": "^4.0.1",
+    "gatsby-plugin-react-helmet": "^3.1.21",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "tailwindcss": "^1.1.4"
